// Arca Container Filesystem Service Protocol
// gRPC API for container filesystem operations
//
// This service runs on vsock port 51821 in each container's Linux VM
// and provides filesystem operations including:
// - Filesystem sync (flush buffers)
// - Archive operations (tar creation/extraction for buildx)
// - OverlayFS upperdir enumeration (for docker diff)

syntax = "proto3";

package arca.filesystem.v1;

option go_package = "github.com/vas-solutus/arca-filesystem-service/proto";

// FilesystemService manages container filesystem operations
// Runs on vsock port 51821 in container's init system namespace
service FilesystemService {
    // Sync filesystem (flush all cached writes to disk)
    // Calls sync() syscall to ensure all filesystem buffers are written
    // Used before reading container filesystem for accurate diff results
    rpc SyncFilesystem(SyncFilesystemRequest) returns (SyncFilesystemResponse);

    // Enumerate upperdir for container diff (OverlayFS-based change detection)
    // Returns all files in /mnt/vdb/upper (added/modified) and whiteouts (deleted)
    // Much faster than full filesystem enumeration
    rpc EnumerateUpperdir(EnumerateUpperdirRequest) returns (EnumerateUpperdirResponse);

    // Read archive - create tar archive of filesystem path
    // Works universally without requiring tar in container
    // Used for GET /containers/{id}/archive endpoint (buildx)
    rpc ReadArchive(ReadArchiveRequest) returns (ReadArchiveResponse);

    // Write archive - extract tar archive to filesystem path
    // Works universally without requiring tar in container
    // Used for PUT /containers/{id}/archive endpoint (buildx)
    rpc WriteArchive(WriteArchiveRequest) returns (WriteArchiveResponse);
}

// Request to sync filesystem (flush all cached writes)
message SyncFilesystemRequest {
    // No parameters needed
}

message SyncFilesystemResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;
}

// Request to enumerate OverlayFS upperdir for container diff
message EnumerateUpperdirRequest {
    // No parameters needed - service knows upperdir is at /mnt/vdb/upper
}

message EnumerateUpperdirResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Files and directories in upperdir
    repeated UpperdirEntry entries = 3;
}

// Represents a file, directory, or whiteout in the OverlayFS upperdir
message UpperdirEntry {
    // Path relative to container root (e.g., "/etc/hosts", "/tmp/myfile")
    string path = 1;

    // Entry type: "file", "dir", "symlink", "whiteout"
    // "whiteout" indicates a deleted file (character device 0/0 in upperdir)
    string type = 2;

    // File size in bytes (0 for directories and whiteouts)
    int64 size = 3;

    // Modification time (Unix timestamp seconds)
    int64 mtime = 4;

    // File mode/permissions (Unix mode bits)
    uint32 mode = 5;
}

// Request to read archive from filesystem path
message ReadArchiveRequest {
    // Container ID (for resolving /run/container/{id}/rootfs path)
    string container_id = 1;

    // Path to file or directory to archive (e.g., "/tmp/myfile.txt" or "/etc")
    string path = 2;
}

message ReadArchiveResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Tar archive data (gzip compressed)
    bytes tar_data = 3;

    // File stat information (for X-Docker-Container-Path-Stat header)
    PathStat stat = 4;
}

// File stat information for archived paths
message PathStat {
    // File or directory name
    string name = 1;

    // File size in bytes
    int64 size = 2;

    // File mode/permissions (os.FileMode as uint32)
    uint32 mode = 3;

    // Modification time (RFC3339 format: "2006-01-02T15:04:05Z07:00")
    string mtime = 4;

    // Symbolic link target (empty if not a symlink)
    string link_target = 5;
}

// Request to write archive to filesystem path
message WriteArchiveRequest {
    // Container ID (for resolving /run/container/{id}/rootfs path)
    string container_id = 1;

    // Destination path where archive should be extracted (e.g., "/tmp")
    string path = 2;

    // Tar archive data to extract
    bytes tar_data = 3;
}

message WriteArchiveResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;
}
